# clients

./: .gitignore  jest.config.js  package-lock.json  package.json  tsconfig.base.json
.github/: CODEOWNERS  renovate.json5
.github/workflows/: alert-ddg-files-modified.yml  auto-reply-discussions.yml  build-browser.yml  build-cli.yml  build-desktop.yml  build-web.yml  crowdin-pull.yml  lint-crowdin-config.yml  publish-cli.yml  repository-management.yml  test-browser-interactions.yml  test.yml
.storybook/: main.ts  preview.tsx
apps/browser/: webpack.base.js
apps/browser/src/: manifest.json  manifest.v3.json  sidepanel-disabled.html
apps/browser/src/autofill/: globals.d.ts
apps/browser/src/background/: main.background.ts  native-messaging.background.spec.ts  nativeMessaging.background.ts
apps/browser/src/popup/: app-routing.module.ts  app.component.html  app.module.ts  main.ts
apps/browser/src/types/: tab-messages.ts
apps/cli/: package.json
apps/cli/src/: oss-serve-configurator.ts  program.ts  utils.spec.ts  utils.ts  vault.program.ts
apps/cli/src/commands/: edit.command.spec.ts  edit.command.ts  get.command.ts
apps/cli/src/key-management/: cli-biometrics-service.ts
apps/cli/src/service-container/: service-container.ts
apps/cli/src/tools/: import.command.ts
apps/cli/src/vault/: create.command.ts
apps/desktop/: electron-builder.json
apps/desktop/desktop_native/: Cargo.toml
apps/desktop/desktop_native/autofill_provider/src/: lib.rs
apps/desktop/desktop_native/bitwarden_chromium_import_helper/: Cargo.toml
apps/desktop/desktop_native/chromium_importer/: Cargo.toml
apps/desktop/desktop_native/chromium_importer/src/: metadata.rs
apps/desktop/desktop_native/chromium_importer/src/chromium/: mod.rs
apps/desktop/desktop_native/chromium_importer/src/chromium/platform/: linux.rs  macos.rs  mod.rs  sandbox.rs
apps/desktop/desktop_native/chromium_importer/src/chromium/platform/windows/: mod.rs
apps/desktop/desktop_native/core/src/ipc/: mod.rs  server.rs
apps/desktop/desktop_native/napi/: index.d.ts
apps/desktop/desktop_native/napi/src/: autofill.rs  chromium_importer.rs  ipc.rs  sshagent_v2.rs
apps/desktop/desktop_native/objc/: Cargo.toml  build.rs
apps/desktop/desktop_native/objc/src/native/: run_command.m
apps/desktop/desktop_native/objc/src/native/chromium_importer/: browser_access_manager.h  browser_access_manager.m  run_chromium_command.h  run_chromium_command.m
apps/desktop/desktop_native/objc/src/native/chromium_importer/commands/: check_browser_installed.h  check_browser_installed.m  has_stored_access.h  has_stored_access.m  request_access.h  request_access.m  start_access.h  start_access.m  stop_access.h  stop_access.m
apps/desktop/desktop_native/proxy/src/: main.rs
apps/desktop/desktop_native/ssh_agent/: Cargo.toml
apps/desktop/desktop_native/ssh_agent/src/: agent.rs  approval.rs  authorization.rs  lib.rs
apps/desktop/desktop_native/ssh_agent/src/crypto/: mod.rs
apps/desktop/desktop_native/ssh_agent/src/server/: connection.rs  mod.rs  protocol.rs
apps/desktop/desktop_native/ssh_agent/src/server/listener/: unix.rs
apps/desktop/desktop_native/ssh_agent/src/storage/: keydata.rs  keystore.rs
apps/desktop/desktop_native/ssh_agent/tests/: common.rs  server_unix.rs  server_windows.rs
apps/desktop/desktop_native/win_webauthn/: Cargo.toml
apps/desktop/desktop_native/win_webauthn/src/: lib.rs  plugin.rs
apps/desktop/desktop_native/win_webauthn/src/api/plugin/: com.rs  crypto.rs  mod.rs
apps/desktop/desktop_native/win_webauthn/src/api/plugin/types/: authenticator.rs  cancel_operation.rs  get_assertion.rs  make_credential.rs  mod.rs  operation.rs  user_verification.rs
apps/desktop/desktop_native/win_webauthn/src/api/sys/: mod.rs  plugin.rs
apps/desktop/native-messaging-test-runner/: package-lock.json  package.json  tsconfig.json
apps/desktop/resources/: com.bitwarden.desktop.devel.yaml  entitlements.mas.autofill-enabled.plist  entitlements.mas.plist
apps/desktop/src/: main.ts
apps/desktop/src/app/: app.component.ts  app.module.ts  main.ts
apps/desktop/src/autofill/: preload.ts
apps/desktop/src/main/: native-messaging.main.ts
apps/desktop/src/services/: biometric-message-handler.service.spec.ts  biometric-message-handler.service.ts
apps/web/: Dockerfile  webpack.base.js
apps/web/src/app/: app.component.ts  oss-routing.module.ts  oss.module.ts
apps/web/src/css/: braintree.css  tailwind.css  vault-filters.css
bitwarden_license/bit-web/src/: main.ts
libs/angular/src/scss/: icons.css  icons.scss
libs/angular/src/services/: jslib-services.module.ts
libs/common/src/abstractions/: api.service.ts
libs/common/src/enums/: feature-flag.enum.ts  push-notification-logout-reason.enum.ts
libs/common/src/key-management/: state-bridge.ts
libs/common/src/services/: api.service.ts
libs/components/: tailwind.config.base.js
libs/components/src/: index.ts  main.ts  tw-theme.css
libs/components/src/accordion/: accordion-group.component.ts  accordion.component.html  accordion.component.spec.ts  accordion.component.ts  accordion.mdx  accordion.stories.ts  index.ts
libs/components/src/banner/: banner.component.html  banner.component.ts  banner.mdx  banner.stories.ts
libs/components/src/berry/: berry.component.html  berry.component.ts
libs/components/src/file-upload/: index.ts  (+8 more)
libs/key-management-ui/src/: index.ts
libs/logging-angular/: tsconfig.spec.json
libs/logging-angular/src/: index.ts
libs/logging/src/: flight-recorder-export.spec.ts  flight-recorder-export.ts  index.ts
libs/shared/: jest.config.ts.js
libs/unlock/src/: default-unlock.service.ts  unlock.service.ts
libs/user-crypto-management/src/: user-key-rotation.service.abstraction.ts  user-key-rotation.service.spec.ts  user-key-rotation.service.ts
scripts/material-icons/: build-with-bwi-names.ts
(+906 files in other folders)
