[package]
name = "chromium_importer"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[dependencies]
aes = { workspace = true }
anyhow = { workspace = true }
async-trait = "=0.1.89"
dirs = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rusqlite = { version = "=0.39.0", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
cbc = { workspace = true, features = ["alloc"] }
oo7 = { workspace = true }
pbkdf2 = "=0.12.2"
sha1 = "=0.10.6"

[target.'cfg(target_os = "macos")'.dependencies]
cbc = { workspace = true, features = ["alloc"] }
desktop_objc = { path = "../objc" }
pbkdf2 = "=0.12.2"
security-framework = { workspace = true }
sha1 = "=0.10.6"
tokio = { workspace = true, features = ["rt"] }

[target.'cfg(target_os = "windows")'.dependencies]
aes-gcm = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
verifysign = "=0.2.4"
windows = { workspace = true, features = [
    "Win32_Security_Cryptography",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[lints]
workspace = true
