[package]
name = "win_webauthn"
version.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[target.'cfg(windows)'.dependencies]
base64 = { workspace = true }
tracing = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
] }
windows-core = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
hex = { workspace = true }

[lints]
workspace = true
